--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-react": "^6.5.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-router": "^2.4.0",
     "webpack": "^1.13.0"
   }
 }
