--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.4.0",
-    "webpack": "^1.13.0",
-    "applicationinsights-js": "*",
-    "imports-loader": "*"
+    "webpack": "^1.13.0"
   }
 }
