--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "history": "^2.1.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.4.0",
@@ -21,6 +22,6 @@
     "babel-jest": "^12.0.2",
     "babel-polyfill": "^6.9.0",
     "jest-cli": "^12.0.2",
-    "script-loader":"*"
+    "script-loader": "*"
   }
 }
